err/batou-scm.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/apipkg-1.4.dist-info'...
Listing './lib/python3.5/site-packages/batou'...
Compiling './lib/python3.5/site-packages/batou/bootstrap.py'...
***   File "./lib/python3.5/site-packages/batou/bootstrap.py", line 58
    print "Updating to batou=={}".format(expected)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/batou/deploy.py'...
***   File "./lib/python3.5/site-packages/batou/deploy.py", line 27
    raise self.exc_info[0], self.exc_info[1], self.exc_info[2]
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/batou/init-template'...
Listing './lib/python3.5/site-packages/batou/init-template/components'...
Listing './lib/python3.5/site-packages/batou/init-template/components/example'...
Listing './lib/python3.5/site-packages/batou/init-template/environments'...
Listing './lib/python3.5/site-packages/batou/lib'...
Listing './lib/python3.5/site-packages/batou/lib/resources'...
Listing './lib/python3.5/site-packages/batou/lib/tests'...
Compiling './lib/python3.5/site-packages/batou/lib/tests/test_cmmi.py'...
***   File "./lib/python3.5/site-packages/batou/lib/tests/test_cmmi.py", line 93
    info.mode = 0755
                   ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/batou/secrets'...
Compiling './lib/python3.5/site-packages/batou/secrets/edit.py'...
***   File "./lib/python3.5/site-packages/batou/secrets/edit.py", line 26
    print "Could not update due to error: {}".format(e)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/batou/secrets/manage.py'...
***   File "./lib/python3.5/site-packages/batou/secrets/manage.py", line 40
    print "\t<Can not decrypt. You seem to not have access.>"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/batou/secrets/tests'...
Listing './lib/python3.5/site-packages/batou/tests'...
Listing './lib/python3.5/site-packages/batou/tests/fixture'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/basic_service'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/basic_service/components'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/basic_service/components/zeo'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/basic_service/components/zope'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/basic_service/environments'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/component'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/sample_service'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/sample_service/components'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/sample_service/components/hello'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/sample_service/environments'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/service_early_resource'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/service_early_resource/components'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/service_early_resource/components/zeo'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/service_early_resource/components/zope'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/service_early_resource/environments'...
Listing './lib/python3.5/site-packages/batou/tests/fixture/template'...
Compiling './lib/python3.5/site-packages/batou/tests/test_remote_core.py'...
***   File "./lib/python3.5/site-packages/batou/tests/test_remote_core.py", line 175
    exec remote_core_mod in local_namespace
                       ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/batou/update.py'...
***   File "./lib/python3.5/site-packages/batou/update.py", line 32
    print "Updating batou to {}".format(version)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/batou-1.6.1.egg-info'...
Listing './lib/python3.5/site-packages/batou_scm'...
Listing './lib/python3.5/site-packages/batou_scm/resources'...
Listing './lib/python3.5/site-packages/batou_scm/tests'...
Listing './lib/python3.5/site-packages/batou_scm-0.6.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/execnet'...
Listing './lib/python3.5/site-packages/execnet/script'...
Listing './lib/python3.5/site-packages/execnet-1.5.0.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
